tests/ui/mutable.stderr
error: expected identifier
 --> tests/ui/mutable.rs:6:12
  |
6 | pub static mut SLICE: [i32] = [..];
  |            ^^^

error: expected identifier
 --> tests/ui/mutable.rs:9:8
  |
9 | static mut ELEMENT: i32 = -1;
  |        ^^^
